fix font on header bottom menu, change letter spacing for titles

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -58,5 +58,6 @@
     letter-spacing: 2.1px;
     font-size: 12px;
     color: var(--dark-color);
+    font-family: var(--font-family-secondary);
   }
 }
