--- a/src/routes/home/Home.css
+++ b/src/routes/home/Home.css
@@ -146,6 +146,7 @@
   font-size: 18px;
   text-transform: uppercase;
   text-align: center;
+  letter-spacing: 3.15px;
 }
 
 .cardDescription {
@@ -319,6 +320,7 @@
   font-weight: 300;
   font-family: var(--font-family-secondary);
   text-align: center;
+  letter-spacing: 3.15px;
 }
 
 .feedbackDescription {
